--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,10 +10,18 @@
     <!--Style CSS-->
     <link rel="stylesheet" type="text/css" href="{{url_for("static", filename="style.css")}}">
 
-    <title></title>
+    <title>
+        {% block title %}
+
+        {% end block %}
+    </title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    
+
+    {% block content %}
+        
+    {% end block %}
 
     <!-- Optional JavaScript; choose one of the two! -->
 
