--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,10 +1,17 @@
 {% extends 'base.html' %}
 <!--Title-->
 {% block title %}
-
-{% end block %}
+News Page
+{% endblock %}
 
 <!--Body Content-->
 {% block content %}
-        
-{% end block %}
+       <div class="container">
+        <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div>
+       </div> 
+{% endblock %}
