--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,7 @@
         {% endblock %}
     </title>
   </head>
-  <body>
+  <body class="text-center">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">News Highlights</a>
