--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,10 +1,16 @@
-{% extends 'base.html' %}
-<!--Title-->
+{% extends 'base.html'%}
+
 {% block title %}
-News Page
+Home Page
 {% endblock %}
-
-<!--Body Content-->
+<!--Body-->
 {% block content %}
+<h1 class="text-center">HOTTEST NEWS</h1>
+    <ul>
+        {% for article in articles %}
+        <div class="row row-cols-1 ">
 
+        </div>
+    </ul>
+    
 {% endblock %}
