--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,9 +8,19 @@ Home Page
 <h1 class="text-center">HOTTEST NEWS</h1>
     <ul>
         {% for article in articles %}
-        <div class="row row-cols-1 ">
-
+        <div class="row row-cols-1 row-cols-md-1 g-4 d-flex ">
+            <div class="col p-3">
+                <div class="card p-3">
+                    <img src="{{article.img}}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h3 class="card-title text-warning">{{article.title}}</h3>
+                        <p class="card-text text-bold text-dark fs-3"> {{article.desc}} </p>
+                        <p class="card-text text-center text-info display-5">{{ article.p_date }}</p>
+                    </div>
+                </div>
+            </div>
         </div>
+        {% endfor %}
     </ul>
     
 {% endblock %}
